[package]
name = "abc080"
version = "0.1.0"
authors = ["guchio3 <astt.hwhw@gmail.com>"]
edition = "2018"

# dependencies added to new project
[dependencies]
proconio = { version = "0.3.6", features = ["derive"] }
ordered-float = { version = "1.0.2" }
itertools = { version = "0.9.0" }
num = { version = "0.2.1" }
petgraph = { version = "0.5.0" }

[profile.release]
lto = true
panic = 'abort'
